--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,17 @@ subprojects {
         targetCompatibility = JavaVersion.VERSION_17
     }
     
+    dependencyManagement {
+        imports {
+            mavenBom 'org.springframework.boot:spring-boot-dependencies:3.2.0'
+            mavenBom 'org.testcontainers:testcontainers-bom:1.19.3'
+        }
+        
+        dependencies {
+            dependency 'org.projectlombok:lombok:1.18.30'
+        }
+    }
+    
     dependencies {
         implementation 'org.springframework.boot:spring-boot-starter'
         testImplementation 'org.springframework.boot:spring-boot-starter-test'
