完成任務9：配置和部署準備
✅ 任務 9.1 - 創建 Docker 配置
- 為 order-service 和 payment-service 創建多階段構建的 Dockerfile
- 創建完整的 docker-compose.yml 用於本地開發環境
- 創建 docker-compose.prod.yml 用於生產環境部署
- 創建 docker-compose.override.yml 用於開發環境覆蓋配置
- 添加數據庫初始化腳本和 RabbitMQ 配置
- 創建 Docker 映像構建腳本，支持註冊表推送

✅ 任務 9.2 - 配置應用監控
- 為兩個服務添加 Micrometer 自定義指標配置
- 創建數據庫和 RabbitMQ 連接健康檢查配置
- 增強 application.yml 配置，包含完整的監控端點
- 創建 Prometheus 配置和抓取規則
- 添加 Grafana 儀表板和數據源配置
- 實現結構化日誌記錄和 Logback 配置
- 添加系統健康監控警報和規則

✅ 任務 9.3 - 創建數據庫遷移腳本
- 為兩個服務添加 Flyway 依賴
- 創建完整的數據庫遷移腳本：
  * Order 服務：orders、payment_requests、retry_history、retry_attempts、日誌表
  * Payment 服務：payment_records、outbox_events、日誌表
- 添加適當的索引和外鍵約束
- 創建多環境 Flyway 配置
- 添加數據庫管理腳本，支持遷移、備份和維護
- 創建開發環境種子數據腳本

📋 額外交付成果：
- DEPLOYMENT.md：涵蓋所有環境的完整部署指南
- 監控堆棧：使用 Prometheus 和 Grafana 的完整可觀測性設置
- 數據庫管理：數據庫操作的自動化腳本
- 多環境支持：dev、docker、sit 和 prod 環境配置
- 安全考慮：健康檢查、適當的用戶管理和安全配置

此實現滿足需求5（六角架構和部署就緒）和需求6（數據庫管理和審計跟蹤），
提供完整的部署和監控基礎設施，支持微服務架構，具備適當的可觀測性、
數據庫管理和多環境配置。

--- a/order-service/src/main/resources/application.yml
+++ b/order-service/src/main/resources/application.yml
@@ -3,6 +3,11 @@ spring:
     name: order-service
   profiles:
     active: dev
+  flyway:
+    enabled: true
+    locations: classpath:db/migration
+    baseline-on-migrate: true
+    validate-on-migrate: true
 
 server:
   port: 8080
@@ -11,10 +16,27 @@ management:
   endpoints:
     web:
       exposure:
-        include: health,info,metrics,prometheus
+        include: health,info,metrics,prometheus,loggers,env
   endpoint:
     health:
       show-details: always
+      show-components: always
+    metrics:
+      enabled: true
+    prometheus:
+      enabled: true
+  metrics:
+    export:
+      prometheus:
+        enabled: true
+    distribution:
+      percentiles-histogram:
+        http.server.requests: true
+      percentiles:
+        http.server.requests: 0.5, 0.95, 0.99
+    tags:
+      application: ${spring.application.name}
+      environment: ${spring.profiles.active}
 
 microservice:
   logging:
@@ -26,6 +48,16 @@ microservice:
 logging:
   level:
     com.example.orderservice: INFO
+    org.springframework.web: INFO
+    org.springframework.amqp: INFO
+    org.hibernate.SQL: WARN
+    org.hibernate.type.descriptor.sql.BasicBinder: WARN
   pattern:
-    console: "%d{yyyy-MM-dd HH:mm:ss} - %msg%n"
-    file: "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
+    console: "%d{yyyy-MM-dd HH:mm:ss.SSS} [%thread] %-5level [%X{traceId:-},%X{spanId:-}] %logger{36} - %msg%n"
+    file: "%d{yyyy-MM-dd HH:mm:ss.SSS} [%thread] %-5level [%X{traceId:-},%X{spanId:-}] %logger{36} - %msg%n"
+  file:
+    name: logs/order-service.log
+  logback:
+    rollingpolicy:
+      max-file-size: 10MB
+      max-history: 30
