--- a/order-service/src/main/resources/application-prod.yml
+++ b/order-service/src/main/resources/application-prod.yml
@@ -13,7 +13,15 @@ spring:
   jpa:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
     hibernate:
-      ddl-auto: none
+      ddl-auto: validate
+
+  flyway:
+    enabled: true
+    locations: classpath:db/migration
+    baseline-on-migrate: false
+    validate-on-migrate: true
+    clean-disabled: true
+    out-of-order: false
     show-sql: false
   rabbitmq:
     host: ${RABBITMQ_HOST}
