--- a/payment-service/build.gradle
+++ b/payment-service/build.gradle
@@ -16,6 +16,10 @@ dependencies {
     runtimeOnly 'com.h2database:h2'
     runtimeOnly 'org.postgresql:postgresql'
     
+    // Database migration
+    implementation 'org.flywaydb:flyway-core'
+    implementation 'org.flywaydb:flyway-database-postgresql'
+    
     // Logging starter dependency
     implementation project(':microservice-logging-starter')
     
