--- a/payment-service/build.gradle
+++ b/payment-service/build.gradle
@@ -18,7 +18,7 @@ dependencies {
     
     // Database migration
     implementation 'org.flywaydb:flyway-core'
-    implementation 'org.flywaydb:flyway-database-postgresql'
+    runtimeOnly 'org.flywaydb:flyway-database-postgresql'
     
     // Logging starter dependency
     implementation project(':microservice-logging-starter')
